# Duplicate-Image-Finder

./: README.md  pyproject.toml
difPy/: __init__.py  __main__.py  build.py  cli.py  dif.py  search.py
difPy/_internal/: __init__.py  stats.py  utils.py  validators.py
docs/getting_started/: cli_usage.rst
scripts/: difPy.bat
src/dif_py/: __init__.py  __main__.py  build.py  cli.py  search.py
src/dif_py/_internal/: compare.py  utils.py  validators.py
