[project]
name = "duplicate-image-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=2.4.6", "pillow>=12.2.0", "typer>=0.15.0"]

[project.scripts]
difpy = "difPy.cli:main"

[dependency-groups]
dev = ["ruff>=0.15.14"]
