[project]
name = "duplicate-image-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "tqdm>=4.67.3",
    "typer>=0.15.0",
]

[project.scripts]
difpy = "dif_py.cli:main"

[dependency-groups]
dev = ["ruff>=0.15.14"]

[build-system]
requires = ["setuptools>=40.8.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"
